--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -39,7 +39,6 @@
         android:text="@string/intro_attention"
         android:textStyle="bold" />
 
-
     <TextView
         android:id="@+id/paper"
         android:layout_width="fill_parent"
@@ -54,19 +53,32 @@
         android:layout_above="@id/paper"
         android:text="@string/paper_check_out"
         android:textStyle="bold" />
-    
-        <ScrollView
+
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/footer"
         android:layout_below="@id/textView2" >
 
-        <Button
-            android:id="@+id/passgo"
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="startPassGo"
-            android:text="@string/title_activity_pass_go" />
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/passgo"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:onClick="startPassGo"
+                android:text="@string/title_activity_pass_go" />
+
+            <Button
+                android:id="@+id/tapi"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:onClick="startTAPI"
+                android:text="@string/title_activity_tapi" />
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
