--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2013 Marcel Walch, Florian Schaub
   
@@ -5,7 +6,7 @@
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
   
-  http://www.apache.org/licenses/LICENSE-2.0
+    http://www.apache.org/licenses/LICENSE-2.0
   
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,14 +15,7 @@
   limitations under the License.
 -->
 <resources>
-
-    <!--
-        Base application theme for API 14+. This theme completely replaces
-        AppBaseTheme from BOTH res/values/styles.xml and
-        res/values-v11/styles.xml on API 14+ devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo">
-        <!-- API 14 theme customizations can go here. -->
-    </style>
-
+	<declare-styleable name="UYIGallery">
+        <attr name="android:galleryItemBackground" />
+    </declare-styleable>
 </resources>
