--- a/res/values/strings_activity_pass_go_settings.xml
+++ b/res/values/strings_activity_pass_go_settings.xml
@@ -17,7 +17,7 @@
 
     <string name="title_activity_pass_go_settings">Pass-Go: Settings</string>
 
-    <string name="pref_header_passgo">Pass-Go</string>
+    <string name="pref_header_passgo">Open Pass-Go</string>
     <string name="pref_title_length">Password length</string>
 
     <string-array name="pref_passgo_length_titles">
@@ -47,13 +47,14 @@
         <item>12</item>
     </string-array>
 
+    
+    <!-- Example settings for Notifications 
     <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
+    
     <string name="pref_header_notifications">Notifications</string>
     <string name="pref_title_new_message_notifications">New message notifications</string>
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_title_vibrate">Vibrate</string>-->
 
 </resources>
