--- a/res/xml/pref_headers.xml
+++ b/res/xml/pref_headers.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2013 Marcel Walch, Florian Schaub
   
@@ -20,5 +21,11 @@
     <header
         android:fragment="de.uulm.graphicalpasswords.PassGoSettingsActivity$PassGoPreferenceFragment"
         android:title="@string/pref_header_passgo" />
+    <header
+        android:fragment="de.uulm.graphicalpasswords.PassGoSettingsActivity$PassGoPreferenceFragment"
+        android:title="@string/pref_header_tapi" />
+    <header
+        android:fragment="de.uulm.graphicalpasswords.PassGoSettingsActivity$PassGoPreferenceFragment"
+        android:title="@string/pref_header_uyi" />
 
 </preference-headers>
